[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ResourceHandout.gd" type="Script" id=2]
[ext_resource path="res://shader/outline.tres" type="Material" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 136.0

[node name="ResourceHandout" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="HoverArea" to="." method="_on_HoverArea_area_entered"]
[connection signal="area_exited" from="HoverArea" to="." method="_on_HoverArea_area_exited"]
